--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
 body {
-  background: grey;
+  background: silver;
+}
+
+.block {
+  background: light-blue;
+  padding: 10px;
+  border: 3px solid black;
 }
