--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
   background: light-blue;
   padding: 10px;
   border: 3px solid black;
-  font-align: center;
+  text-align: center;
 }
 
 .title {
