--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
   background: light-blue;
   padding: 10px;
   border: 3px solid black;
+  border-radius: 10px;
 }
 
 
@@ -25,6 +26,7 @@ body {
   padding: 10px;
   border: 3px solid black;
   text-align: center;
+  border-radius: 10px;
 }
 
 .title {
