Changed title styles

--- a/style.css
+++ b/style.css
@@ -30,11 +30,11 @@ body {
 }
 
 #title {
+  border: 3px solid white;
   border-radius: 75%;
   padding: 20px; 
   width: 400px;
   height: 150px;
-  background: white;
 }
 
 .title {
