--- a/style.css
+++ b/style.css
@@ -5,9 +5,13 @@ a, p, h1, h2, h3 {
 }
 
 body {
-  cursor: url(`Untitled drawing.png`), crosshair;
+  cursor: url(`Untitled drawing.png`), auto;
   background: silver;
   font-family: 'Kanit', sans-serif;
+}
+
+body::hover {
+  cursor: url(`Untitled drawing.png`), auto;
 }
 
 .center {
