--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@ a, p, h1, h2, h3 {
 
 body {
   cursor: url(`Untitled drawing.png`), auto;
-  background: silver;
+  background: blueviolet;
   font-family: 'Kanit', sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
 }
 
 body::hover {
